store metadata history (#264)
